Fix text alignment to not be justified to fix small screen issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,6 @@
 main {
 	text-align: left;
 	padding: 5em 1em 1em 1em;
-	/* background-color: white; */
 	margin: 0em auto;
 	min-height: 100vh;
 	height: 100%;
@@ -42,9 +41,17 @@ nav ul a:hover {
 	color: #f4edf5;
 }
 
-p, #project-content ul li, #goals-content ul li {
+p, #project-content ul li {
 	font-family: -apple-system, Helvetica, arial, sans-serif;
 	text-align: justify;
+	font-size: 1.0em;
+	line-height: 1.2em;
+	margin-bottom: 0.5em;
+	color: #404040;
+}
+
+#goals-content ul li {
+	font-family: -apple-system, Helvetica, arial, sans-serif;
 	font-size: 1.0em;
 	line-height: 1.2em;
 	margin-bottom: 0.5em;
